Fixed alignment

--- a/src/SiteInspector/stylesheets/views/_shell.scss
+++ b/src/SiteInspector/stylesheets/views/_shell.scss
@@ -135,11 +135,11 @@ $scroll-button-animation: all .5s ease;
         }
 
         button.si-action-trigger {
-            color: black;
+            color: #4d5a67;
             margin-top: 0;
             height: $header-height;
             min-width: $header-height;
-            padding: 15px 0;
+            padding: 13px 0;
 
             .si-glyph-settings {
                 font-size: 26px;
